<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout
            android:id="@+id/btn_upload_container"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btnSelectImage"
                android:layout_margin="5dip"
                android:layout_weight="33"
                style="@android:style/Widget.Button"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:text="@string/upload_button_selectImage"
                android:onClick="clickSelectImage"/>
        <Button
                style="@android:style/Widget.Button"
                android:layout_margin="5dip"
                android:layout_weight="33"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:text="@string/upload_button_takePicture"
                android:onClick="clickTakePicture"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/input_upload_container"
            android:layout_below="@id/btnSelectImage"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView

                android:id="@+id/uploadTxtLoginStatus"
                android:textColor="@color/Green"
                android:layout_margin="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dip"/>
        <TextView
                android:text="@string/upload_label_imagetitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/uploadTxtTitle"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:layout_marginBottom="5dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/upload_label_imagecaption"
                android:layout_marginBottom="5dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/uploadTxtCaption"
                android:inputType="textNoSuggestions"
                android:lines="3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        <CheckBox
                android:id="@+id/uploadCheckSubmitGallery"
                android:text="@string/upload_check_submit_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/imgUploadImgView"
        android:layout_margin="50dip"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/input_upload_container"
        android:maxHeight="400dip"
        android:maxWidth="400dip"
        android:minHeight="100dip"
        android:minWidth="100dip"/>
    <Button
            android:id="@+id/btnUpload"
            android:layout_alignParentBottom="true"
            style="@android:style/Widget.Button"
            android:layout_margin="5dip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:enabled="false"
            android:text="@string/upload_button_uploadImage"
            android:onClick="uploadImageToImgur"/>
</RelativeLayout>